Updated login page and manage tab page

--- a/manage.html
+++ b/manage.html
@@ -20,46 +20,132 @@
     <!-- Background image -->
     <div class="hero_area">
         <div class="hero_bg_box">
-            <img src="./images/background.jpeg" alt="" />
+          <img src="./images/background.jpeg" alt="" />
         </div>
         <header>
-            <!-- Navbar -->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li>
-                                <a href="index.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-house-door"></i>
-                                        <p class="menu-title">Home</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="login.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-person-circle"></i>
-                                        <p class="menu-title">Login</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="manage.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-book"></i>
-                                        <p class="menu-title">Manage</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ol>
-                    </nav>
-                </div>
-            </nav>
-            <!-- Navbar -->
+          <!-- Navbar -->
+          <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li>
+                    <a href="index.html">
+                      <div class="sub-menu">
+                        <i class="bi bi-house-door"></i>
+                        <p class="menu-title">Home</p>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="login.html">
+                      <div class="sub-menu">
+                        <i class="bi bi-person-circle"></i>
+                        <p class="menu-title">Login</p>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="manage.html">
+                      <div class="sub-menu">
+                        <i class="bi bi-book"></i>
+                        <p class="menu-title">Manage</p>
+                      </div>
+                    </a>
+                  </li>
+                </ol>
+              </nav>
+            </div>
+          </nav>
+          <!-- Navbar -->
         </header>
         <!-- Navbar -->
-        <div class="color" style="color: white">
+  
+        <div class="indextitle-details">
+          <h6 class="mb-3 title-main">Manage your pets</h6>
+          <div class="fade-in-effect"></div>
+          <div class="text-white">
+            <a class="btn btn-outline-light btn-lg" href="#form-div" role="button"
+              >Get Started</a
+            >
+          </div>
+        </div>
+      </div>
+      <div id="form-div">
+        <div class="color" style="color: rgb(0, 0, 0)">
+            <section class="vh-80" style="background: white;">
+                <div class="mb-3">
+                    <div class="main-section">
+                      <h1>Manage Pet</h1>
+                    </div>
+                  </div>
+                <div class="container py-5 h-100">
+                    <div class="row d-flex justify-content-center align-items-center h-100">
+                        <div class="col col-xl-10">
+                            <div class="card mb-5" style="border-radius: 15px;">
+                                <div class="card-body p-4">
+                                    <h3 class="mb-3">PID:5 | Tabby (Pug)</h3>
+                                    <p>Note: Tabby is getting chubby maybe he needs to join the marathon</p>
+                                    <p class="small mb-0"><i class="bi bi-check2"></i> <span class="mx-2">|</span>
+                                        Health Last Checked: 11 April , 2021</p>
+                                        <button type="button" class="btn btn-success">Perform Health Check</button>
+                                    <hr class="my-4">
+                                    <div class="d-flex justify-content-start align-items-center">
+                                        <p class="mb-0 text-uppercase"><span class="text-muted small"></span>
+                                            <span class="ms-3 me-4"></span>View Heartrate <i class="bi bi-activity"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"><span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>View Location <i class="bi bi-geo-alt"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"> <span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>Edit Pet Details <i class="bi bi-pen"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"> <span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>Remove Pet <i class="bi bi-shield-x"></i>
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="card" style="border-radius: 15px;">
+                                <div class="card-body p-4">
+                                    <h3 class="mb-3">PID:8 | Biscuit (Bulldog)</h3>
+                                    <p>Note: Need to create a diet plan for biscuit since he eats everything</p>
+                                    <p class="small mb-0"><i class="bi bi-check2"></i> <span class="mx-2">|</span>
+                                        Health Last Checked: 16 November , 2022</p>
+                                        <button type="button" class="btn btn-success">Perform Health Check</button>
+                                    <hr class="my-4">
+                                    <div class="d-flex justify-content-start align-items-center">
+                                        <p class="mb-0 text-uppercase"><span class="text-muted small"></span>
+                                            <span class="ms-3 me-4"></span>View Heartrate <i class="bi bi-activity"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"><span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>View Location <i class="bi bi-geo-alt"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"> <span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>Edit Pet Details <i class="bi bi-pen"></i>
+                                        </p>
+                                        <p class="mb-0 text-uppercase"> <span class="text-muted small"></span>
+                                            <span class="ms-3 me-4">|</span>Remove Pet <i class="bi bi-shield-x"></i>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+      </div>
+    <!-- MDB -->
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
+</body>
+
+</html>
+
+
+<!--
+            <div class="color" style="color: white">
             <section class="vh-100" style="background: #000000ad;">
                 <div class="container py-5 h-100">
                     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -119,10 +205,4 @@
                 </div>
             </section>
         </div>
-    </div>
-    <!-- MDB -->
-    <!-- MDB -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
-</body>
-
-</html>
+-->
