--- a/login.html
+++ b/login.html
@@ -1,131 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
-    <title>Index Page</title>
-</head>
+    <title>Login</title>
+  </head>
 
-<body>
+  <body>
     <!-- Background image -->
     <div class="hero_area">
-        <div class="hero_bg_box">
-            <img src="./images/background.jpeg" alt="" />
-        </div>
-        <header>
-            <!-- Navbar -->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li>
-                                <a href="index.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-house-door"></i>
-                                        <p class="menu-title">Home</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="login.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-person-circle"></i>
-                                        <p class="menu-title">Login</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="manage.html">
-                                    <div class="sub-menu">
-                                        <i class="bi bi-book"></i>
-                                        <p class="menu-title">Manage</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ol>
-                    </nav>
-                </div>
-            </nav>
-            <!-- Navbar -->
-        </header>
+      <div class="hero_bg_box">
+        <img src="./images/background.jpeg" alt="" />
+      </div>
+      <header>
         <!-- Navbar -->
-        <section class="background-radial-gradient overflow-hidden">
-            <style>
-                .bg-glass {
-                    background-color: hsla(0, 0%, 100%, 0.9) !important;
-                    backdrop-filter: saturate(200%) blur(25px);
-                }
-            </style>
-
-            <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
-                <div class="row gx-lg-5 align-items-center mb-5">
-                    <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-                        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                            Create an account and login <br />
-                            <span style="color: hsl(218, 81%, 75%)">To manage your pet's health</span>
-                        </h1>
-                        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                            After logging in, you can view all your pets health activity under the 'Manage' tab
-                        </p>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li>
+                  <a href="index.html">
+                    <div class="sub-menu">
+                      <i class="bi bi-house-door"></i>
+                      <p class="menu-title">Home</p>
                     </div>
-
-                    <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-                        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-                        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-
-                        <div class="card bg-glass">
-                            <div class="card-body px-4 py-5 px-md-5">
-                                <form>
-                                    <!-- 2 column grid layout with text inputs for the first and last names -->
-
-
-                                    <!-- Email input -->
-                                    <div class="form-outline mb-4">
-                                        <input type="email" id="form3Example3" class="form-control" />
-                                        <label class="form-label" for="form3Example3">Username</label>
-                                    </div>
-
-                                    <!-- Password input -->
-                                    <div class="form-outline mb-4">
-                                        <input type="password" id="form3Example4" class="form-control" />
-                                        <label class="form-label" for="form3Example4">Password</label>
-                                    </div>
-
-
-                                    <!-- Submit button -->
-                                    <button type="submit" class="btn btn-primary btn-block mb-4">
-                                        Login
-                                    </button>
-
-                                    <!-- Register buttons -->
-                                    <div class="text-center">
-                                        <p>or create an account</p>
-
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="login.html">
+                    <div class="sub-menu">
+                      <i class="bi bi-person-circle"></i>
+                      <p class="menu-title">Login</p>
                     </div>
-                </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="manage.html">
+                    <div class="sub-menu">
+                      <i class="bi bi-book"></i>
+                      <p class="menu-title">Manage</p>
+                    </div>
+                  </a>
+                </li>
+              </ol>
+            </nav>
+          </div>
+        </nav>
+        <!-- Navbar -->
+      </header>
+      <!-- Navbar -->
+
+      <div class="indextitle-details">
+        <h6 class="mb-3 title-main">Manage Account</h6>
+        <div class="fade-in-effect"></div>
+        <div class="text-white">
+          <a class="btn btn-outline-light btn-lg" href="#form-div" role="button"
+            >Get Started</a
+          >
+        </div>
+      </div>
+    </div>
+    <div id="form-div">
+      <div class="mb-3">
+        <div class="main-section">
+          <h1>Accounts</h1>
+        </div>
+      </div>
+      <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a
+            class="nav-link active"
+            id="ex1-tab-1"
+            data-mdb-toggle="tab"
+            href="#ex1-tabs-1"
+            role="tab"
+            aria-controls="ex1-tabs-1"
+            aria-selected="true"
+            >Login</a
+          >
+        </li>
+        <li class="nav-item" role="presentation">
+          <a
+            class="nav-link"
+            id="ex1-tab-2"
+            data-mdb-toggle="tab"
+            href="#ex1-tabs-2"
+            role="tab"
+            aria-controls="ex1-tabs-2"
+            aria-selected="false"
+            >Create an Account</a
+          >
+        </li>
+      </ul>
+      <!-- Tabs navs -->
+
+      <!-- Tabs content -->
+      <div class="tab-content" id="ex1-content">
+        <div
+          class="tab-pane fade show active"
+          id="ex1-tabs-1"
+          role="tabpanel"
+          aria-labelledby="ex1-tab-1"
+        >
+          <div class="form-class">
+            <div class="form-outline mb-3">
+              <input
+                type="text"
+                id="speciesType"
+                class="form-control"
+                required
+              />
+              <label class="form-label" for="speciesType">Username</label>
             </div>
-        </section>
+
+            <div class="form-outline mb-3">
+              <input
+                type="password"
+                id="height"
+                class="form-control"
+                required
+              />
+              <label class="form-label" for="height">Password</label>
+            </div>
+            <!-- 2 column grid layout for inline styling -->
+            <div class="row mb-4">
+              <div class="col d-flex justify-content-center">
+                <!-- Checkbox -->
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    value=""
+                    id="form2Example31"
+                    checked
+                  />
+                  <label class="form-check-label" for="form2Example31">
+                    Remember me
+                  </label>
+                </div>
+              </div>
+
+              <div class="col">
+                <!-- Simple link -->
+                <a href="#!">Forgot password?</a>
+              </div>
+            </div>
+            <div class="text-center">
+              <p>Not a member? <a href="login.html">Register</a></p>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="location.href='index.html';">Login</button>
+            <br />
+            <br />
+          </div>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="ex1-tabs-2"
+          role="tabpanel"
+          aria-labelledby="ex1-tab-2"
+        >
+          <div class="form-class">
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" id="form3Example1" class="form-control" />
+                  <label class="form-label" for="form3Example1"
+                    >First name</label
+                  >
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" id="form3Example2" class="form-control" />
+                  <label class="form-label" for="form3Example2"
+                    >Last name</label
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="form-outline mb-3">
+              <input
+                type="text"
+                id="speciesType"
+                class="form-control"
+                required
+              />
+              <label class="form-label" for="speciesType">Username</label>
+            </div>
+
+            <div class="form-outline mb-3">
+              <input
+                type="password"
+                id="height"
+                class="form-control"
+                required
+              />
+              <label class="form-label" for="height">Password</label>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="location.href='login.html';">Signup</button>
+            <br />
+            <br />
+          </div>
+        </div>
+      </div>
+      <!-- Tabs content -->
     </div>
     <!-- MDB -->
-    <script>
-
-    </script>
+    <script></script>
     <!-- MDB -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
-</body>
-
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"
+    ></script>
+  </body>
 </html>
