Updated Styles for login and manage page

--- a/manage.html
+++ b/manage.html
@@ -20,7 +20,7 @@
     <!-- Background image -->
     <div class="hero_area">
         <div class="hero_bg_box">
-          <img src="./images/background.jpeg" alt="" />
+          <img src="./images/managebackground.png" alt="" />
         </div>
         <header>
           <!-- Navbar -->
