--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       </div>
 
       <div class="form-outline mb-3">
-        <input type="text" id="height" class="form-control" required />
-        <label class="form-label" for="height">Height</label>
+        <input type="number" id="height" class="form-control" required />
+        <label class="form-label" for="height">Height (in cm)</label>
       </div>
 
       <div class="form-outline mb-3">
-        <input type="text" id="weight" class="form-control" required />
-        <label class="form-label" for="weight">Weight</label>
+        <input type="number" id="weight" class="form-control" required />
+        <label class="form-label" for="weight">Weight (in kg)</label>
       </div>
 
       <div class="form-outline mb-3">
@@ -157,7 +157,7 @@
                   selected breed:<span class="mx-6"></span> <b>
                     <p id="illnesses"></p>
                   </b></p>
-                <p class="text-muted mb-4"><i class="bi bi-emoji-smile-fill"></i> Breed's Temperment:<span
+                <p class="text-muted mb-4"><i class="bi bi-emoji-smile-fill"></i> Breed's Temperament:<span
                     class="mx-6"></span> <b>
                     <p id="pbehaviour"></p>
                   </b></p>
