--- a/login.html
+++ b/login.html
@@ -76,11 +76,10 @@
             <div class="mb-3">
                 <h1>Login/Signup</h1>
             </div>
-            <div class="text-center">
-            <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+            <ul class="nav nav-tabs mb-3 justify-content-center" id="ex1" role="tablist">
               <li class="nav-item" role="presentation">
                 <a
-                  class="nav-link active"
+                  class="nav-link active login-tabs"
                   id="ex1-tab-1"
                   data-mdb-toggle="tab"
                   href="#ex1-tabs-1"
@@ -92,7 +91,7 @@
               </li>
               <li class="nav-item" role="presentation">
                 <a
-                  class="nav-link"
+                  class="nav-link login-tabs"
                   id="ex1-tab-2"
                   data-mdb-toggle="tab"
                   href="#ex1-tabs-2"
@@ -103,7 +102,6 @@
                 >
               </li>
             </ul>
-          </div>
             <!-- Tabs navs -->
       
             <!-- Tabs content -->
