--- a/login.html
+++ b/login.html
@@ -117,7 +117,7 @@
                     <input
                       type="text"
                       id="speciesType"
-                      class="form-control"
+                      class="form-control login-labels"
                       required
                     />
                     <label class="form-label login-label" for="speciesType">Username</label>
@@ -127,7 +127,7 @@
                     <input
                       type="password"
                       id="height"
-                      class="form-control"
+                      class="form-control login-labels"
                       required
                     />
                     <label class="form-label login-label" for="height">Password</label>
@@ -173,7 +173,7 @@
                   <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example1" class="form-control" />
+                        <input type="text" id="form3Example1" class="form-control login-labels" />
                         <label class="form-label login-label" for="form3Example1"
                           >First name</label
                         >
@@ -181,7 +181,7 @@
                     </div>
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
+                        <input type="text" id="form3Example2" class="form-control login-labels" />
                         <label class="form-label login-label" for="form3Example2"
                           >Last name</label
                         >
@@ -192,7 +192,7 @@
                     <input
                       type="text"
                       id="speciesType"
-                      class="form-control"
+                      class="form-control login-labels"
                       required
                     />
                     <label class="form-label login-label" for="speciesType">Username</label>
@@ -202,7 +202,7 @@
                     <input
                       type="password"
                       id="height"
-                      class="form-control"
+                      class="form-control login-labels"
                       required
                     />
                     <label class="form-label login-label" for="height">Password</label>
