--- a/login.html
+++ b/login.html
@@ -207,6 +207,15 @@
                     />
                     <label class="form-label login-label" for="height">Password</label>
                   </div>
+                                    <div class="form-outline mb-3">
+                    <input
+                      type="password"
+                      id="height"
+                      class="form-control login-labels"
+                      required
+                    />
+                    <label class="form-label login-label" for="height">Confirm Password</label>
+                  </div>
                   <button type="button" class="btn btn-primary" onclick="location.href='login.html';">Signup</button>
                   <br />
                   <br />
