--- a/login.html
+++ b/login.html
@@ -70,7 +70,8 @@
         <!-- Navbar -->
       </header>
       <!-- Navbar -->
-
+      <div class="lcard centered" style="background-color: #1818186b;">
+        <div class="card-body">
       <div class="indextitle-details">
         <div id="form-div">
             <div class="mb-3">
@@ -225,6 +226,8 @@
             <!-- Tabs content -->
           </div>
       </div>
+    </div>
+</div>
     </div>
     <!-- MDB -->
     <script></script>
